@@ -1,0 +1,34 @@
+/*
+ *   jlscp - a java LinuxSampler control protocol API
+ *
+ *   Copyright (C) 2005-2008 Grigor Iliev <grigor@grigoriliev.com>
+ *
+ *   This file is part of jlscp.
+ *
+ *   jlscp is free software; you can redistribute it and/or modify
+ *   it under the terms of the GNU General Public License version 2
+ *   as published by the Free Software Foundation.
+ *
+ *   jlscp is distributed in the hope that it will be useful,
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ *   GNU General Public License for more details.
+ *
+ *   You should have received a copy of the GNU General Public License
+ *   along with jlscp; if not, write to the Free Software
+ *   Foundation, Inc., 59 Temple Place, Suite 330, Boston,
+ *   MA  02111-1307  USA
+ */
+
+package org.linuxsampler.lscp.event;
+
+/**
+ * The listener interface for receiving MIDI data events.
+ * @author Grigor Iliev
+ */
+public interface MidiDataListener extends java.util.EventListener {
+	/**
+	 * Invoked when MIDI data arrives.
+	 */
+	public void midiDataArrived(MidiDataEvent e);
+}
